SchemeGuiEditor/SchemeGuiEditor/ParserComponents/ScmGrammarParser.cs
// $ANTLR 3.0.1 D:\\Projects\\AntlrTestApps\\ScmGrammar.g 2008-06-17 02:48:17
namespace 
	SchemeGuiEditor.ParserComponents

{

using SchemeGuiEditor.ToolboxControls;
using System.Drawing;
using System.Collections.Generic;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



public class ScmGrammarParser : Parser 
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"SEMI", 
		"DEFINE", 
		"NEW", 
		"FRAME", 
		"BUTTON", 
		"MESSAGE", 
		"CHECKBOX", 
		"HPANEL", 
		"VPANEL", 
		"PARENT", 
		"LABEL", 
		"WIDTH", 
		"HEIGHT", 
		"ENABLED", 
		"BORDER", 
		"SPACING", 
		"ALIGNMENT", 
		"MIN_WIDTH", 
		"MIN_HEIGHT", 
		"STRETCH_WIDTH", 
		"STRETCH_HEIGHT", 
		"VERT_MARGIN", 
		"HORIZ_MARGIN", 
		"LP", 
		"RP", 
		"FALSE", 
		"TRUE", 
		"TOP", 
		"CENTER", 
		"BOTTOM", 
		"LEFT", 
		"RIGHT", 
		"NULL", 
		"NO_RESIZE_BORDER", 
		"NO_CAPTION", 
		"NO_SYSTEM_MENU", 
		"MDI_PARENT", 
		"MDI_CHILD", 
		"FLOAT", 
		"STYLE", 
		"DELETED", 
		"ID", 
		"NAME", 
		"NUMBER", 
		"QUOTE", 
		"PLUS", 
		"MINUS", 
		"STAR", 
		"SLASH", 
		"LT", 
		"GT", 
		"EQ", 
		"COMMENT", 
		"WS", 
		"CAR", 
		"DOT", 
		"DIGIT", 
		"LEAD_DIGIT", 
		"ZERO", 
		"NEWLINE"
    };

    public const int MDI_CHILD = 41;
    public const int LT = 53;
    public const int STAR = 51;
    public const int HORIZ_MARGIN = 26;
    public const int SPACING = 19;
    public const int STRETCH_WIDTH = 23;
    public const int RP = 28;
    public const int LEAD_DIGIT = 61;
    public const int STRETCH_HEIGHT = 24;
    public const int LP = 27;
    public const int NEW = 6;
    public const int BUTTON = 8;
    public const int FLOAT = 42;
    public const int ID = 45;
    public const int CAR = 58;
    public const int EOF = -1;
    public const int DEFINE = 5;
    public const int CENTER = 32;
    public const int ZERO = 62;
    public const int BORDER = 18;
    public const int MDI_PARENT = 40;
    public const int QUOTE = 48;
    public const int PARENT = 13;
    public const int MIN_HEIGHT = 22;
    public const int NAME = 46;
    public const int SLASH = 52;
    public const int VPANEL = 12;
    public const int ALIGNMENT = 20;
    public const int LEFT = 34;
    public const int HPANEL = 11;
    public const int ENABLED = 17;
    public const int MESSAGE = 9;
    public const int PLUS = 49;
    public const int DIGIT = 60;
    public const int EQ = 55;
    public const int DOT = 59;
    public const int COMMENT = 56;
    public const int NO_SYSTEM_MENU = 39;
    public const int NO_CAPTION = 38;
    public const int HEIGHT = 16;
    public const int NULL = 36;
    public const int CHECKBOX = 10;
    public const int NUMBER = 47;
    public const int RIGHT = 35;
    public const int MINUS = 50;
    public const int VERT_MARGIN = 25;
    public const int SEMI = 4;
    public const int TRUE = 30;
    public const int DELETED = 44;
    public const int NO_RESIZE_BORDER = 37;
    public const int WS = 57;
    public const int NEWLINE = 63;
    public const int LABEL = 14;
    public const int WIDTH = 15;
    public const int BOTTOM = 33;
    public const int STYLE = 43;
    public const int MIN_WIDTH = 21;
    public const int GT = 54;
    public const int FRAME = 7;
    public const int FALSE = 29;
    public const int TOP = 31;
    
    
        public ScmGrammarParser(ITokenStream input) 
    		: base(input)
    	{
    		InitializeCyclicDFAs();
        }
        

    override public string[] TokenNames
	{
		get { return tokenNames; }
	}

    override public string GrammarFileName
	{
		get { return "D:\\Projects\\AntlrTestApps\\ScmGrammar.g"; }
	}

    
    List<object> _parsedData = new List<object>();
    public List<object> ParsedData
    {
    	get
    	{
    		return _parsedData;
    	}
    }


    
    // $ANTLR start main
    // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:77:1: main : ( scmBlock )+ EOF ;
    public void main() // throws RecognitionException [1]
    {   
        try 
    	{
            // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:77:5: ( ( scmBlock )+ EOF )
            // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:77:7: ( scmBlock )+ EOF
            {
            	// D:\\Projects\\AntlrTestApps\\ScmGrammar.g:77:7: ( scmBlock )+
            	int cnt1 = 0;
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);
            	    
            	    if ( (LA1_0 == LP || (LA1_0 >= FALSE && LA1_0 <= TRUE) || LA1_0 == ID || (LA1_0 >= NUMBER && LA1_0 <= COMMENT)) )
            	    {
            	        alt1 = 1;
            	    }
            	    
            	
            	    switch (alt1) 
            		{
            			case 1 :
            			    // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:77:7: scmBlock
            			    {
            			    	PushFollow(FOLLOW_scmBlock_in_main382);
            			    	scmBlock();
            			    	followingStackPointer_--;

            			    
            			    }
            			    break;
            	
            			default:
            			    if ( cnt1 >= 1 ) goto loop1;
            		            EarlyExitException eee =
            		                new EarlyExitException(1, input);
            		            throw eee;
            	    }
            	    cnt1++;
            	} while (true);
            	
            	loop1:
            		;	// Stops C# compiler whinging that label 'loop1' has no statements

            	Match(input,EOF,FOLLOW_EOF_in_main385); 
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end main

    
    // $ANTLR start scmBlock
    // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:79:1: scmBlock : (frm= scmFrm | btn= scmBtn | msg= scmMsg | cbx= scmCbx | hpnl= scmHpnl | com= comment | pe= parExpr );
    public void scmBlock() // throws RecognitionException [1]
    {   
        ScmFrameProperties frm = null;

        ScmButtonProperties btn = null;

        ScmMessageProperties msg = null;

        ScmCheckBoxProperties cbx = null;

        ScmHorizontalPanelProperties hpnl = null;

        string com = null;

        string pe = null;
        
    
        try 
    	{
            // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:80:2: (frm= scmFrm | btn= scmBtn | msg= scmMsg | cbx= scmCbx | hpnl= scmHpnl | com= comment | pe= parExpr )
            int alt2 = 7;
            switch ( input.LA(1) ) 
            {
            case LP:
            	{
                int LA2_1 = input.LA(2);
                
                if ( (LA2_1 == DEFINE) )
                {
                    int LA2_4 = input.LA(3);
                    
                    if ( (LA2_4 == ID) )
                    {
                        int LA2_5 = input.LA(4);
                        
                        if ( (LA2_5 == LP) )
                        {
                            int LA2_6 = input.LA(5);
                            
                            if ( (LA2_6 == NEW) )
                            {
                                switch ( input.LA(6) ) 
                                {
                                case MESSAGE:
                                	{
                                    alt2 = 3;
                                    }
                                    break;
                                case CHECKBOX:
                                	{
                                    alt2 = 4;
                                    }
                                    break;
                                case FRAME:
                                	{
                                    alt2 = 1;
                                    }
                                    break;
                                case BUTTON:
                                	{
                                    alt2 = 2;
                                    }
                                    break;
                                case HPANEL:
                                	{
                                    alt2 = 5;
                                    }
                                    break;
                                	default:
                                	    NoViableAltException nvae_d2s7 =
                                	        new NoViableAltException("79:1: scmBlock : (frm= scmFrm | btn= scmBtn | msg= scmMsg | cbx= scmCbx | hpnl= scmHpnl | com= comment | pe= parExpr );", 2, 7, input);
                                
                                	    throw nvae_d2s7;
                                }
                            
                            }
                            else 
                            {
                                NoViableAltException nvae_d2s6 =
                                    new NoViableAltException("79:1: scmBlock : (frm= scmFrm | btn= scmBtn | msg= scmMsg | cbx= scmCbx | hpnl= scmHpnl | com= comment | pe= parExpr );", 2, 6, input);
                            
                                throw nvae_d2s6;
                            }
                        }
                        else 
                        {
                            NoViableAltException nvae_d2s5 =
                                new NoViableAltException("79:1: scmBlock : (frm= scmFrm | btn= scmBtn | msg= scmMsg | cbx= scmCbx | hpnl= scmHpnl | com= comment | pe= parExpr );", 2, 5, input);
                        
                            throw nvae_d2s5;
                        }
                    }
                    else 
                    {
                        NoViableAltException nvae_d2s4 =
                            new NoViableAltException("79:1: scmBlock : (frm= scmFrm | btn= scmBtn | msg= scmMsg | cbx= scmCbx | hpnl= scmHpnl | com= comment | pe= parExpr );", 2, 4, input);
                    
                        throw nvae_d2s4;
                    }
                }
                else if ( (LA2_1 == LP || (LA2_1 >= FALSE && LA2_1 <= TRUE) || LA2_1 == ID || (LA2_1 >= NUMBER && LA2_1 <= EQ)) )
                {
                    alt2 = 7;
                }
                else 
                {
                    NoViableAltException nvae_d2s1 =
                        new NoViableAltException("79:1: scmBlock : (frm= scmFrm | btn= scmBtn | msg= scmMsg | cbx= scmCbx | hpnl= scmHpnl | com= comment | pe= parExpr );", 2, 1, input);
                
                    throw nvae_d2s1;
                }
                }
                break;
            case COMMENT:
            	{
                alt2 = 6;
                }
                break;
            case FALSE:
            case TRUE:
            case ID:
            case NUMBER:
            case QUOTE:
            case PLUS:
            case MINUS:
            case STAR:
            case SLASH:
            case LT:
            case GT:
            case EQ:
            	{
                alt2 = 7;
                }
                break;
            	default:
            	    NoViableAltException nvae_d2s0 =
            	        new NoViableAltException("79:1: scmBlock : (frm= scmFrm | btn= scmBtn | msg= scmMsg | cbx= scmCbx | hpnl= scmHpnl | com= comment | pe= parExpr );", 2, 0, input);
            
            	    throw nvae_d2s0;
            }
            
            switch (alt2) 
            {
                case 1 :
                    // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:80:4: frm= scmFrm
                    {
                    	PushFollow(FOLLOW_scmFrm_in_scmBlock398);
                    	frm = scmFrm();
                    	followingStackPointer_--;

                    	_parsedData.Add(frm);
                    
                    }
                    break;
                case 2 :
                    // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:81:4: btn= scmBtn
                    {
                    	PushFollow(FOLLOW_scmBtn_in_scmBlock409);
                    	btn = scmBtn();
                    	followingStackPointer_--;

                    	_parsedData.Add(btn);
                    
                    }
                    break;
                case 3 :
                    // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:82:4: msg= scmMsg
                    {
                    	PushFollow(FOLLOW_scmMsg_in_scmBlock420);
                    	msg = scmMsg();
                    	followingStackPointer_--;

                    	_parsedData.Add(msg);
                    
                    }
                    break;
                case 4 :
                    // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:83:4: cbx= scmCbx
                    {
                    	PushFollow(FOLLOW_scmCbx_in_scmBlock431);
                    	cbx = scmCbx();
                    	followingStackPointer_--;

                    	_parsedData.Add(cbx);
                    
                    }
                    break;
                case 5 :
                    // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:84:4: hpnl= scmHpnl
                    {
                    	PushFollow(FOLLOW_scmHpnl_in_scmBlock442);
                    	hpnl = scmHpnl();
                    	followingStackPointer_--;

                    	_parsedData.Add(hpnl);
                    
                    }
                    break;
                case 6 :
                    // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:85:4: com= comment
                    {
                    	PushFollow(FOLLOW_comment_in_scmBlock453);
                    	com = comment();
                    	followingStackPointer_--;

                    	_parsedData.Add(new ScmComment(com));
                    
                    }
                    break;
                case 7 :
                    // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:86:4: pe= parExpr
                    {
                    	PushFollow(FOLLOW_parExpr_in_scmBlock464);
                    	pe = parExpr();
                    	followingStackPointer_--;

                    	_parsedData.Add(new ScmBlock(pe));
                    
                    }
                    break;
            
            }
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end scmBlock

    
    // $ANTLR start scmFrm
    // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:88:1: scmFrm returns [ScmFrameProperties frmProp] : LP DEFINE id= ID LP NEW FRAME ( scmFrmProp[$frmProp] )+ RP RP ;
    public ScmFrameProperties scmFrm() // throws RecognitionException [1]
    {   

        ScmFrameProperties frmProp = null;
    
        IToken id = null;
    
        
        	ScmFrame frame = new ScmFrame();
        	frmProp =  frame.ScmPropertyObject as ScmFrameProperties;
    
        try 
    	{
            // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:94:2: ( LP DEFINE id= ID LP NEW FRAME ( scmFrmProp[$frmProp] )+ RP RP )
            // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:94:4: LP DEFINE id= ID LP NEW FRAME ( scmFrmProp[$frmProp] )+ RP RP
            {
            	Match(input,LP,FOLLOW_LP_in_scmFrm484); 
            	Match(input,DEFINE,FOLLOW_DEFINE_in_scmFrm486); 
            	id = (IToken)input.LT(1);
            	Match(input,ID,FOLLOW_ID_in_scmFrm492); 
            	Match(input,LP,FOLLOW_LP_in_scmFrm494); 
            	Match(input,NEW,FOLLOW_NEW_in_scmFrm496); 
            	Match(input,FRAME,FOLLOW_FRAME_in_scmFrm498); 
            	// D:\\Projects\\AntlrTestApps\\ScmGrammar.g:94:35: ( scmFrmProp[$frmProp] )+
            	int cnt3 = 0;
            	do 
            	{
            	    int alt3 = 2;
            	    int LA3_0 = input.LA(1);
            	    
            	    if ( (LA3_0 == LP || (LA3_0 >= FALSE && LA3_0 <= TRUE) || LA3_0 == ID || (LA3_0 >= NUMBER && LA3_0 <= COMMENT)) )
            	    {
            	        alt3 = 1;
            	    }
            	    
            	
            	    switch (alt3) 
            		{
            			case 1 :
            			    // D:\\Projects\\AntlrTestApps\\ScmGrammar.g:94:35: scmFrmProp[$frmProp]
            			    {
            			    	PushFollow(FOLLOW_scmFrmProp_in_scmFrm500);
            			    	scmFrmProp(frmProp);
            			    	followingStackPointer_--;
